--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   image_picker: ^0.6.1+11
+  #flutter_web_image_picker: ^0.0.2 may need this for  Platform.isWeb is avalable
+  video_player: ^0.10.3+3
+  scoped_model: ^1.0.1
+  toggle_switch: "^0.1.4"
+  flip_panel: ^1.0.1
 
 dev_dependencies:
   flutter_test:
